# EVM-mcp

./: README.md
.github/workflows/: render-keepalive.yml  rust-release.yml
frontend/: .env  .env.example  .gitignore  README.md  package-lock.json  package.json  server.js
frontend/api/: chat.js  health.js
frontend/api/mcp/: call.js  health.js  tools.js
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: FluidCursor.js
frontend/src/hooks/: use-FluidCursor.js
mcp-server/: Cargo.toml  README.md  env.example  mcp.json  register_wallet.sh  wallets.json
mcp-server/scripts/: get-release.sh  install.sh
mcp-server/src/: config.rs  lib.rs  main.rs  utils.rs
mcp-server/src/api/: balance.rs  contract.rs  discord.rs  docs.rs  event.rs  faucet.rs  fees.rs  health.rs  history.rs  mod.rs  seistream.rs  transfer.rs  tx.rs  wallet.rs
mcp-server/src/blockchain/: client.rs  evm_client.rs  mod.rs  models.rs  nonce_manager.rs  wallet_manager.rs
mcp-server/src/blockchain/services/: balance.rs  contract.rs  discord.rs  docs.rs  event.rs  faucet.rs  fees.rs  history.rs  mod.rs  seistream.rs  token.rs  transactions.rs  wallet.rs
mcp-server/src/mcp/: encryption.rs  handler.rs  mod.rs  protocol.rs  wallet_storage.rs
mcp-server/tests/: test_mcp_server.sh  wallet_tests.rs
