[package]
name = "evm-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework (Axum)
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Async and Tracing
futures = "0.3"
futures-util = "0.3"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization and Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
base64 = "0.21"
hex = "0.4"
secrecy = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Configuration and Environment
dotenvy = "0.15"
dirs = "5.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Blockchain (Ethereum)
ethers = { version = "2.0", features = ["rustls"] }
ethers-core = { version = "2.0" }
ethers-providers = { version = "2.0", features = ["ws"] }
ethers-signers = "2.0"
ethers-contract = "2.0"
ethers-etherscan = "2.0"

# Cryptography and Keys
bip39 = { version = "2.0", features = ["std"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
rand = { version = "0.8", features = ["std"] }

# Concurrency
dashmap = "5.5"

# Utilities
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "evm_mcp"
path = "src/main.rs"
